// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component with specified input 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
         Budgeting Dashboard 
      </h1>
      <div
        className="content-container"
      >
        <h2
          className="page-header__subtitle"
        >
          In the timeframe, specified below, you have earned 
          <span>
             
            $2,400.00
             
          </span>
           and spent 
          <span>
             
            $1,500.00
             
          </span>
        </h2>
        <h2
          className="page-header__subtitle"
        >
          Remianing Funds: 
          <span>
            $900.00
          </span>
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the component with no data input 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
         Budgeting Dashboard 
      </h1>
      <div
        className="content-container"
      >
        <h2
          className="page-header__subtitle"
        >
          In the timeframe, specified below, you have earned 
          <span>
             
            $0.00
             
          </span>
           and spent 
          <span>
             
            $0.00
             
          </span>
        </h2>
        <h2
          className="page-header__subtitle"
        >
          Remianing Funds: 
          <span>
            $0.00
          </span>
        </h2>
      </div>
    </div>
  </div>
</div>
`;
